--- a/primer/index.html
+++ b/primer/index.html
@@ -7,16 +7,18 @@
 </head>
 <body>
     <h1>Comandos Git</h1>
-    <p>
-        com1: git init
+    <p>com1: git init </p>
 
-        com2: git --config user.name "Yaseni"
-        com3: git --config user.email "yaseni.esquivel@tecsup.edu.pe"
-        com4: git --config list
-        com5: git add hola
-        com4: git add .
+    <p>com2: git --config user.name "Yaseni"</p>
+    <p>com3: git --config user.email "yaseni.esquivel@tecsup.edu.pe"</p>
+    <p>com4: git config --list</p>
+    <p>com5: git add hola</p>
+    <p>com4: git add . //para regresar a 'A' </p>
+    <p>com5: git commit -m "creación de archivos html"</p>
 
-        Lorem ipsum dolor sit amet.
-    </p>
+    <p>//Si sale este error  SSL certificate problem: self-signed certificate in certificate chain</p>
+
+    <p>colocar el comando sgt:</p>
+    <p>git config --global http.sslVerify false # Do NOT do this!</p>
 </body>
 </html>
